src-tauri/build_log_2_utf8.txt
cargo :     
Checking app v0.1.0 
(C:\Users\longv\dev\
nera-vpn-desktop\src
-tauri)
At line:1 char:1
+ cargo check > 
build_log_2.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~
    + CategoryInfo  
            : 
NotSpeci    fied: ( 
   Checki    ng 
ap...ktop\src-    
tauri):String) []   
 , RemoteException
    + 
FullyQualifiedE    
rrorId : NativeCo   
 mmandError
 
warning: unused 
imports: 
`CheckMenuItem` and 
`MouseButtonState`
  --> 
src\main.rs:33:41
   |
33 |     
menu::{Menu, 
MenuItem, 
MenuBuilder, 
CheckMenuItem},
   |                
                    
     ^^^^^^^^^^^^^
34 |     tray::{Tray
IconBuilder, 
TrayIconEvent, 
MouseButton, 
MouseButtonState},
   |                
                    
                    
 ^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(u
nused_imports)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: `tauri_plugi
n_shell::ShellExt`
  --> 
src\main.rs:39:5
   |
39 | use tauri_plugi
n_shell::ShellExt;
   |     ^^^^^^^^^^^
^^^^^^^^^^^^^^^^^

warning: unused 
variable: `app`
   --> 
src\main.rs:637:40
    |
637 | async fn impor
t_wireguard_config_a
sync(app: 
AppHandle) -> 
Result<String, 
String> {
    |               
                    
     ^^^ help: if 
this is 
intentional, prefix 
it with an 
underscore: `_app`
    |
    = note: `#[warn(
unused_variables)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
variable: 
`dest_path`
   --> 
src\main.rs:638:10
    |
638 |      let 
dest_path = nera_con
f_path().map_err(|e|
 e.to_string())?;
    |          
^^^^^^^^^ help: if 
this is 
intentional, prefix 
it with an 
underscore: 
`_dest_path`

error[E0599]: no 
method named `emit` 
found for reference 
`&AppHandle` in the 
current scope
   --> 
src\main.rs:443:10
    |
442 | /     
app_handle
443 | |         .emi
t("vpn-status-change
d", 
VpnStatusPayload { 
connected: true })
    | 
|_________-^^^^
    |
    = help: items 
from traits can 
only be used if the 
trait is in scope
help: there is a 
method `exit` with 
a similar name, but 
with different 
arguments
   --> C:\Users\long
v\.cargo\registry\sr
c\index.crates.io-19
49cf8c6b5b557f\tauri
-2.9.5\src\app.rs:53
4:3
    |
534 |   pub fn 
exit(&self, 
exit_code: i32) {
    |   ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^
^^
help: trait 
`Emitter` which 
provides `emit` is 
implemented but not 
in scope; perhaps 
you want to import 
it
    |
 12 + use 
tauri::Emitter;
    |

error[E0599]: no 
method named `emit` 
found for struct 
`AppHandle<R>` in 
the current scope
   --> 
src\main.rs:508:22
    |
507 | /             
    app_handle_clone
508 | |             
        .emit(
    | |_____________
________-^^^^
    |
   ::: C:\Users\long
v\.cargo\registry\sr
c\index.crates.io-19
49cf8c6b5b557f\tauri
-2.9.5\src\lib.rs:95
2:6
    |
952 |     fn 
emit<S: Serialize + 
Clone>(&self, 
event: &str, 
payload: S) -> 
Result<()> {
    |        ---- 
the method is 
available for 
`AppHandle` here
    |
    = help: items 
from traits can 
only be used if the 
trait is in scope
help: there is a 
method `exit` with 
a similar name, but 
with different 
arguments
   --> C:\Users\long
v\.cargo\registry\sr
c\index.crates.io-19
49cf8c6b5b557f\tauri
-2.9.5\src\app.rs:53
4:3
    |
534 |   pub fn 
exit(&self, 
exit_code: i32) {
    |   ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^
^^
help: trait 
`Emitter` which 
provides `emit` is 
implemented but not 
in scope; perhaps 
you want to import 
it
    |
 12 + use 
tauri::Emitter;
    |

error[E0599]: no 
method named `emit` 
found for reference 
`&AppHandle` in the 
current scope
   --> 
src\main.rs:566:18
    |
565 | /             
app_handle
566 | |             
    .emit("vpn-statu
s-changed", 
VpnStatusPayload { 
connected: false })
    | |_____________
____-^^^^
    |
    = help: items 
from traits can 
only be used if the 
trait is in scope
help: there is a 
method `exit` with 
a similar name, but 
with different 
arguments
   --> C:\Users\long
v\.cargo\registry\sr
c\index.crates.io-19
49cf8c6b5b557f\tauri
-2.9.5\src\app.rs:53
4:3
    |
534 |   pub fn 
exit(&self, 
exit_code: i32) {
    |   ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^
^^
help: trait 
`Emitter` which 
provides `emit` is 
implemented but not 
in scope; perhaps 
you want to import 
it
    |
 12 + use 
tauri::Emitter;
    |

error[E0599]: no 
method named `emit` 
found for reference 
`&AppHandle` in the 
current scope
   --> 
src\main.rs:580:10
    |
579 | /     
app_handle
580 | |         .emi
t("vpn-status-change
d", 
VpnStatusPayload { 
connected: false })
    | 
|_________-^^^^
    |
    = help: items 
from traits can 
only be used if the 
trait is in scope
help: there is a 
method `exit` with 
a similar name, but 
with different 
arguments
   --> C:\Users\long
v\.cargo\registry\sr
c\index.crates.io-19
49cf8c6b5b557f\tauri
-2.9.5\src\app.rs:53
4:3
    |
534 |   pub fn 
exit(&self, 
exit_code: i32) {
    |   ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^
^^
help: trait 
`Emitter` which 
provides `emit` is 
implemented but not 
in scope; perhaps 
you want to import 
it
    |
 12 + use 
tauri::Emitter;
    |

error[E0599]: no 
method named `emit` 
found for struct 
`AppHandle<R>` in 
the current scope
   --> 
src\main.rs:699:9
    |
699 |     app.emit("
kill-switch-changed"
, KillSwitchPayload 
{ enabled })
    |         ^^^^
    |
   ::: C:\Users\long
v\.cargo\registry\sr
c\index.crates.io-19
49cf8c6b5b557f\tauri
-2.9.5\src\lib.rs:95
2:6
    |
952 |   fn emit<S: 
Serialize + 
Clone>(&self, 
event: &str, 
payload: S) -> 
Result<()> {
    |      ---- the 
method is available 
for `AppHandle` here
    |
    = help: items 
from traits can 
only be used if the 
trait is in scope
help: there is a 
method `exit` with 
a similar name, but 
with different 
arguments
   --> C:\Users\long
v\.cargo\registry\sr
c\index.crates.io-19
49cf8c6b5b557f\tauri
-2.9.5\src\app.rs:53
4:3
    |
534 |   pub fn 
exit(&self, 
exit_code: i32) {
    |   ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^
^^
help: trait 
`Emitter` which 
provides `emit` is 
implemented but not 
in scope; perhaps 
you want to import 
it
    |
 12 + use 
tauri::Emitter;
    |

error[E0599]: no 
method named `emit` 
found for reference 
`&AppHandle` in the 
current scope
   --> 
src\main.rs:888:41
    |
888 | ...           
        let _ = 
app.emit(
    |               
                
----^^^^
    |
    = help: items 
from traits can 
only be used if the 
trait is in scope
help: there is a 
method `exit` with 
a similar name, but 
with different 
arguments
   --> C:\Users\long
v\.cargo\registry\sr
c\index.crates.io-19
49cf8c6b5b557f\tauri
-2.9.5\src\app.rs:53
4:3
    |
534 |   pub fn 
exit(&self, 
exit_code: i32) {
    |   ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^
^^
help: trait 
`Emitter` which 
provides `emit` is 
implemented but not 
in scope; perhaps 
you want to import 
it
    |
 12 + use 
tauri::Emitter;
    |

warning: unused 
variable: 
`dest_path`
   --> 
src\main.rs:619:9
    |
619 |     let 
dest_path = 
nera_conf_path()?;
    |         
^^^^^^^^^ help: if 
this is 
intentional, prefix 
it with an 
underscore: 
`_dest_path`

warning: unused 
variable: 
`file_path`
   --> 
src\main.rs:621:9
    |
621 |     let 
file_path = app.dial
og().file().blocking
_pick_file();
    |         
^^^^^^^^^ help: if 
this is 
intentional, prefix 
it with an 
underscore: 
`_file_path`

For more 
information about 
this error, try 
`rustc --explain 
E0599`.
warning: `app` (bin 
"app") generated 6 
warnings
error: could not 
compile `app` (bin 
"app") due to 6 
previous errors; 6 
warnings emitted
